--- a/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.html
+++ b/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.html
@@ -19,7 +19,7 @@
     <div class="card-body">
       <div class="row">
         <div class="col-md-6 border">
-          <!-- Left column: Recipe basic information -->
+          <!-- Left body column: Recipe basic information -->
           <mat-form-field class="w-100" appearance="outline">
             <mat-label>Name</mat-label>
             <input matInput formControlName="name" placeholder="Enter recipe name">
