The names instruction item to instruction box to be consistent with the drag and drop angular material documentation

--- a/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.scss
+++ b/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.scss
@@ -1,7 +1,7 @@
 .instruction-list {
 }
 
-.instruction-item {
+.instruction-box {
   border: 1px solid #f0f0f0;
   border-radius: 4px;
   padding: 10px;
