--- a/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.html
+++ b/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.html
@@ -35,3 +35,19 @@
     </form>
   </div>
 </div>
+
+<div class="card my-3">
+  <div class="card-header">
+    <div class="row">
+      <div class="col-md-12 border">Testing New Angular Concepts</div>
+    </div>
+  </div>
+  <div class="card-body">
+    <div class="row">
+      <div class="col-md-12 border">
+        <!-- Testing scripts goes here -->
+
+      </div>
+    </div>
+  </div>
+</div>
