--- a/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.html
+++ b/Wasfat/admin.angular/src/app/recipes/crud-recipe/crud-recipe.component.html
@@ -47,6 +47,14 @@
       <div class="col-md-12 border">
         <!-- Testing scripts goes here -->
 
+        <ng-container *ngIf="isEditMode">
+          <h1>Edit mode</h1>
+        </ng-container>
+
+        <ng-container *ngIf="!isEditMode">
+          <h1>Create mode</h1>
+        </ng-container>
+
       </div>
     </div>
   </div>
